--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ yarn.lock
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
 
 # Build outputs
 dist/
