--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "backend",
+  "name": "mockoon-manager-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend for Mockoon Manager",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "pm2 start process.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "multer": "^1.4.5-lts.1",
-    "pm2": "^5.4.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.10.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
