--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
